@@ -1,7 +1,6 @@
 <ws-modal *ngIf="isOpened" [(isOpened)]="isOpened" [isCloseIconDisplayed]="false" [maxWidth]="700">
     <form modalBody [formGroup]="form">
-        <mat-select class="form-control form-control-sm mb-2 border-0 float-right status-container" style="width: 150px; padding-top: .35rem" placeholder="Status" formControlName="status"
-        [ngClass]="'status-container-' + form.controls['status'].value" (selectionChange)="updateOrderReceiptStatus($event.value)">
+        <mat-select class="form-control form-control-sm mb-2 border-0 float-right status-container" style="width: 150px; padding-top: .35rem" placeholder="Status" formControlName="status" [ngClass]="'status-container-' + form.controls['status'].value" (selectionChange)="updateOrderReceiptStatus($event.value)">
             <mat-option [value]="'new'" *ngIf="!item || item.status == 'new' || item.status == 'paid' || item.status == 'completed' || item.status == 'refunded' || item.status == 'cancelled'">New</mat-option>
             <mat-option [value]="'paid'" *ngIf="item && (item.status == 'paid' || item.status == 'in_progress')">Paid</mat-option>
             <mat-option [value]="'in_progress'" *ngIf="item && (item.status == 'paid' || item.status == 'in_progress' || item.status == 'delivered')">In Progress</mat-option>
@@ -10,7 +9,7 @@
             <mat-option [value]="'refunded'" *ngIf="item && (item.status == 'cancelled' || item.status == 'refunded')">Refunded</mat-option>
             <mat-option [value]="'completed'" *ngIf="item && (item.status == 'delivered' || item.status == 'completed')">Completed</mat-option>
         </mat-select>
-        <p class="mb-0 font-8" *ngIf="item">ID: {{ item?.receiptId }}</p>
+        <p class="mb-0 font-8" *ngIf="item?.receiptId">ID: {{ item?.receiptId }}</p>
         <div class="font-8 mb-2" *ngIf="item">
             <p class="mb-0" style="color: #6b778c" *ngIf="item.createdAt">Created {{ item?.createdAt | date: 'MMM d, y, h:mm a'}}</p>
             <p class="mb-0" style="color: #6b778c" *ngIf="item.updatedAt">Updated {{ item?.updatedAt | date: 'MMM d, y, h:mm a'}}</p>
@@ -53,7 +52,7 @@
         </div>
         <div class="mb-3">
             <h5 class="h6">Delivery Fee</h5>
-            <input class="form-control form-control-sm" placeholder="Price ($)" formControlName="deliveryFee" (input)="notifyCalculation()"/>
+            <input class="form-control form-control-sm" placeholder="Price ($)" formControlName="deliveryFee" (input)="notifyCalculation()" />
         </div>
         <div class="mb-3">
             <h5 class="h6">Promotion</h5>
@@ -87,7 +86,27 @@
             </div>
         </div>
         <hr />
-        <div class="mb-3">
+        <h5 class="h6">Delivery Option</h5>
+        <mat-radio-group class="d-block font-9 mb-3" formControlName="deliveryOption">
+            <mat-radio-button [color]="'primary'" class="d-block" [value]="'self_pickup'">Self-pickup</mat-radio-button>
+            <mat-radio-button [color]="'primary'" class="d-block" [value]="'delivery'">Delivery</mat-radio-button>
+        </mat-radio-group>
+        <div *ngIf="form.controls.deliveryOption.value == 'self_pickup'" class="mb-3">
+            <h5 class="h6">Customer Details</h5>
+            <div class="row no-gutters">
+                <div class="col-lg-6 pr-lg-1">
+                    <input class="form-control form-control-sm mb-2" maxlength="36" placeholder="First Name" formControlName="firstName" />
+                </div>
+                <div class="col-lg-6 pl-lg-1">
+                    <input class="form-control form-control-sm mb-2" maxlength="36" placeholder="Last Name" formControlName="lastName" />
+                </div>
+            </div>
+            <input class="form-control form-control-sm mb-2" placeholder="Contact Tel" maxlength="36" formControlName="phoneNumber" />
+            <mat-checkbox [color]="'primary'" class="pt-1 mr-2 d-inline-block" formControlName="isCustomerSaved">
+                <span class="font-8 align-middle">Check to save customer</span>
+            </mat-checkbox>
+        </div>
+        <div *ngIf="form.controls.deliveryOption.value == 'delivery'" class="mb-3">
             <h5 class="h6">Delivery Details</h5>
             <div class="row no-gutters">
                 <div class="col-lg-6 pr-lg-1">
@@ -97,9 +116,10 @@
                     <input class="form-control form-control-sm mb-2" maxlength="36" placeholder="Last Name" formControlName="lastName" />
                 </div>
             </div>
+            <input class="form-control form-control-sm mb-2" placeholder="Contact Tel" maxlength="36" formControlName="phoneNumber" />
             <div class="mb-2">
                 <div class="mb-2">
-                    <input class="form-control form-control-sm" maxlength="128" placeholder="Delivery Address" formControlName="address"/>
+                    <input class="form-control form-control-sm" maxlength="128" placeholder="Delivery Address" formControlName="address" />
                 </div>
                 <div class="row no-gutters">
                     <div class="col-lg-4 pr-lg-2">
@@ -119,13 +139,12 @@
                     </div>
                 </div>
             </div>
-            <input class="form-control form-control-sm mb-2" placeholder="Contact Tel" maxlength="36" formControlName="phoneNumber" />
             <mat-checkbox [color]="'primary'" class="pt-1 mr-2 d-inline-block" formControlName="isCustomerSaved">
                 <span class="font-8 align-middle">Check to save customer</span>
             </mat-checkbox>
         </div>
         <div class="mb-3">
-            <h5 class="h6">ETA Delivery Date</h5>
+            <h5 class="h6">ETA {{ form.controls.deliveryOption.value == 'delivery' ? 'Delivery' : 'Pick-up'}} Date</h5>
             <div class="row no-gutters">
                 <input (click)="fromPicker.open()" placeholder="Date" [min]="todayDate" formControlName="etaDate" class="form-control form-control-sm mb-2 mr-3" style="max-width: 200px" [matDatepicker]="fromPicker" />
                 <mat-datepicker #fromPicker startView="month" [startAt]="todayDate"></mat-datepicker>
@@ -140,7 +159,7 @@
                         </mat-option>
                     </mat-select>
                 </div>
-            </div>  
+            </div>
         </div>
         <div class="mb-3">
             <h5 class="h6">Remark</h5>
@@ -149,12 +168,13 @@
         <div>
             <div class="d-inline-block float-right">
                 <button *ngIf="isEditable()" class="btn btn-controller btn-sm mr-2" [disabled]="modifyLoading.isRunning()" (click)="modifyItem()">
-                    <ws-spinner class="mr-2" *ngIf="modifyLoading.isRunning()" [width]="15" [height]="15" [borderWidth]="1" [spinnerColor]="'#b71c1c'"></ws-spinner>{{item ? 'Save' : 'Create'}}</button>
+                    <ws-spinner class="mr-2" *ngIf="modifyLoading.isRunning()" [width]="15" [height]="15" [borderWidth]="1" [spinnerColor]="'#b71c1c'"></ws-spinner>{{item ? 'Save' : 'Create'}}
+                </button>
                 <button class="btn btn-controller btn-sm" (click)="close()">Cancel</button>
             </div>
         </div>
     </form>
 </ws-modal>
 
-<confirm-modal *ngIf="isCreateEmptyOrderModalOpened" [(isOpened)]="isCreateEmptyOrderModalOpened" id="removeItemsModal" [loading]="modifyLoading.isRunning()" [message]="'Are you sure the order is empty?'" [action]="modifyCallback.bind(this, tempOrder)">
+<confirm-modal *ngIf="isCreateEmptyOrderModalOpened" [(isOpened)]="isCreateEmptyOrderModalOpened" id="removeItemsModal" [loading]="modifyLoading.isRunning()" [message]="'Are you sure the order is empty?'" [action]="modifyCallback.bind(this, tempOrder)" [closeCallback]="returnToModifyOrder.bind(this, tempOrder)">
 </confirm-modal>
