@@ -11,7 +11,7 @@
     <button class="btn btn-sm btn-controller mr-3" (click)="selectTabAndRefreshReceipts('new')" [class.selected]="selectedTab == 'new'">New ({{numberOfNewOrders}})</button>
     <button class="btn btn-sm btn-controller mr-3" (click)="selectTabAndRefreshReceipts('paid')" [class.selected]="selectedTab == 'paid'">Paid ({{numberOfPaidOrders}})</button>
     <button class="btn btn-sm btn-controller mr-3" (click)="selectTabAndRefreshReceipts('in_progress')" [class.selected]="selectedTab == 'in_progress'">In Progress ({{numberOfInProgressOrders}})</button>
-    <button class="btn btn-sm btn-controller mr-3" (click)="selectTabAndRefreshReceipts('delivered')" [class.selected]="selectedTab == 'delivered'">Delivered ({{numberOfDeliveryOrders}})</button>
+    <button class="btn btn-sm btn-controller mr-3" (click)="selectTabAndRefreshReceipts('delivered')" [class.selected]="selectedTab == 'delivered'">Delivered / Pickup ({{numberOfDeliveryOrders}})</button>
     <button class="btn btn-sm btn-controller mr-3" (click)="selectTabAndRefreshReceipts('completed')" [class.selected]="selectedTab == 'completed'">Completed</button>
     <button class="btn btn-sm btn-controller mr-3" (click)="selectTabAndRefreshReceipts('cancelled')" [class.selected]="selectedTab == 'cancelled'">Cancelled</button>
     <div class="ml-auto ws-circle-button p-0" *ngIf="selectedTab == 'all'" mdbDropdown>
@@ -29,7 +29,7 @@
                 <mat-checkbox (change)="triggerStatusColumns('in_progress')" [checked]="statusColumns.includes('in_progress')" [color]="'primary'" class="mr-2 d-inline-block">In Progress</mat-checkbox>
             </button>
             <button class="dropdown-item" (click)="$event.stopPropagation()">
-                <mat-checkbox (change)="triggerStatusColumns('delivered')" [checked]="statusColumns.includes('delivered')" [color]="'primary'" class="mr-2 d-inline-block">Delivered</mat-checkbox>
+                <mat-checkbox (change)="triggerStatusColumns('delivered')" [checked]="statusColumns.includes('delivered')" [color]="'primary'" class="mr-2 d-inline-block">Delivered / Pickup</mat-checkbox>
             </button>
             <button class="dropdown-item" (click)="$event.stopPropagation()">
                 <mat-checkbox (change)="triggerStatusColumns('completed')" [checked]="statusColumns.includes('completed')" [color]="'primary'" class="mr-2 d-inline-block">Completed</mat-checkbox>
