@@ -4,9 +4,10 @@
 
 - v1.0.1060                                 -
 ---------------------------------------------
-- 2020-12-26                                -
+- 2020-12-27                                -
 ---------------------------------------------
 .: WSM: Task: Create a status selection column (WSM-258)
+.: WSM: Task: Mark order as self-pickup (WSM-257)
 
 ---------------------------------------------
 - 2020-12-26                                -
